bat.bool1.sleepin.SleepIn.scala.error
Erreur de compilation :
SleepIn:5: error: Unmatched closing brace '}' ignored here
}
^